<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/first_frgament"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<TextView
    android:id="@+id/txtUsr"
    style="@style/txtBtn"
    android:background="@drawable/layer_list"
    android:text="@string/txt_usr"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="@dimen/_100sdp"
    />
    <TextView
        android:id="@+id/orTxt"
        style="@style/txtHint"
        android:text="@string/txt_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtUsr"
        app:layout_constraintBottom_toBottomOf="@+id/txtDrvr"/>
    <TextView
        android:id="@+id/txtDrvr"
        style="@style/txtBtn"
        android:text="@string/txt_drvr"
        android:layout_marginBottom="@dimen/_190sdp"
        app:layout_constraintTop_toBottomOf="@+id/orTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>